responding to more static code analysis